--- a/Ecommerce Website 1/style.css
+++ b/Ecommerce Website 1/style.css
@@ -6,11 +6,43 @@
     font-family: 'Spartan', sans-serif;
 }
 
-#header{
+#header{ /* styling the navbar */
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px 80px;
     background: #e3e6f3;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+}
+#navbar{  /* placing all the text in one line horizontally instead of vertically */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#navbar li{ /* removing dots in unordered list*/
+    list-style: none;
+    padding: 0 20px;
+    position: relative;
+}
+#navbar li a{ /* removing lines under text in navbar and changing text colors */
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    color: #1a1a1a;
+    transition: 0.3; /* transition between hover will done smoothly */
+}
+#navbar li a:hover,/*hovering and changing text color during hover */
+#navbar li a.active{ /* keeping hover active */
+    color: #088178;
+}
+#navbar li a.active::after,
+#navbar li a:hover::after{ /* putting a line under the hovered button in navbar*/
+    content: "";
+    width: 30%;
+    height: 2px;
+    background:#088178 ;
+    position: absolute;
+    bottom: -4px;
+    left: 20px;
 }
