feat{style.css}: added styling to hero section

--- a/Ecommerce Website 1/style.css
+++ b/Ecommerce Website 1/style.css
@@ -13,6 +13,10 @@
     padding: 20px 80px;
     background: #e3e6f3;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+    z-index: 999; /*keeping header sticky*/
+    position: sticky; /*keeping header sticky*/
+    top: 0%; /*keeping header sticky*/
+    left: 0; /*keeping header sticky*/
 }
 #navbar{  /* placing all the text in one line horizontally instead of vertically */
     display: flex;
@@ -45,4 +49,36 @@
     position: absolute;
     bottom: -4px;
     left: 20px;
+}
+
+/*Hero section Styling */
+#hero{
+    background-image: url("./Assets/hero4.png");
+    height: 90vh; /*to give hero section (or any section the full screen */
+    width: 100%;
+    background-size: cover; /*for aligning image in centre*/
+    background-position: top 25% right 0;/*for aligning image in centre*/
+    padding: 0 100px; /*for aligning the hero text in some side middle */
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+#hero h4{
+    padding-bottom: 15px;
+}
+#hero h1{
+    color: #088178;
+}
+#hero button{
+    background-image: url("/Assets/button.png");
+    background-color: transparent;
+    color: #088178;
+    border: 0;
+    padding: 14px 80px 14px 65px;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 15px;
 }
