feat{style.css}: added styling to feature box section

--- a/Ecommerce Website 1/style.css
+++ b/Ecommerce Website 1/style.css
@@ -82,3 +82,55 @@
     font-weight: 700;
     font-size: 15px;
 }
+
+/*** Feature Section Styling **/
+.section-p1{
+    padding: 40px 80px;
+}
+
+#feature .fe-box{ /*adding border into feature box and aligning its under text in center */
+    width: 180px;
+    text-align: center;
+    padding: 25px 15px;
+    box-shadow: 20px 20px 34px rgba(0, 0, 0,0.03);/* adjusting shadow of border */
+    border: 1px solid #cce7d0; /*choosing color of border*/
+    border-radius: 4px; /* adjusting border of the box */ 
+    margin: 15px 0;/* making border of box curve from edge */
+}
+#feature .fe-box:hover{ /*adding hover effect in feature box */
+    box-shadow: 20px 20px 54px rgba(70, 62, 221, 0.1);/* adjusting shadow of border */
+}
+#feature .fe-box h6{ /*adding background color and adjusting text in the feature box */
+    display: inline;
+    padding: 9px 8px 6px 8px;
+    line-height: 1;
+    border-radius: 4px;
+    color: #088178;
+    background-color: #fddde4;
+}
+#feature .fe-box img{ /*making feature box responsive */
+    width: 100%;
+    margin-bottom: 10px;
+}
+#feature {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+#feature .fe-box:nth-child(2) h6{
+    background-color: #cdebbc;
+}
+#feature .fe-box:nth-child(3) h6{
+    background-color: #d1e8f2;
+}
+#feature .fe-box:nth-child(4) h6{
+    background-color: #cdd4f8;
+}
+#feature .fe-box:nth-child(5) h6{
+    background-color: #f6dbf6;
+}
+#feature .fe-box:nth-child(6) h6{
+    background-color: #fff2ef;
+}
+
