--- a/HTML_CSS_Basics/image-gallery.css
+++ b/HTML_CSS_Basics/image-gallery.css
@@ -10,21 +10,35 @@ body{
 }
 .navbar{
     width: 100%;
+    /* height: 200px; */
+    height: 20px;
     padding: 22px 0px;
     border-bottom: none;
     background-color: rgba(225,225, 225, 0.1);
 }
-.nav-item{
-    width: 600px;
-    height: 20px;
-    margin-left: 700px;
-    margin-top: -40px;
-    margin-bottom: 20px;
+.navbar .navbar-img{
+    height: 100px;
+    width: 100px;
+    float: left;
+    padding-left: 4%;
+    margin-top: -20px;
+    cursor: pointer;
+}
+
+.navbar .nav-item{
+    width: 500px;
+    height: 10px;
+    margin-left: 860px;
+    /* margin-top: -40px; */
+    /* margin-bottom: 20px; */
+    padding-bottom: 20px;
+    margin-top: -20px;
+
 }
 .navbar ul li {
     list-style-type: none;
-    float: right;
-   padding: 18px;
+    float: left;
+   padding-left: 18px;
 }
 a{
     color:white;
